--- a/main_cnn_01.ipynb
+++ b/main_cnn_01.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predict fuel efficient\n",
-    "\n",
-    "    - link: https://www.tensorflow.org/tutorials/keras/regression?hl=pt-br"
+    "# Predict fuel efficient"
    ]
   },
   {
