[ADDED] arquivos para segmentacao das imagens e manipulacao da resolucao da imagem.

--- a/TCC/src/utils/convert_tiff_to_jpg.ipynb
+++ b/TCC/src/utils/convert_tiff_to_jpg.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,13 +37,13 @@
      "output_type": "stream",
      "text": [
       "d:\\Documentos\\Faculdade - UFPI\\Weight Estimation\\predict_ovinos\\TCC\\images\\02_02\n",
-      "new filename : amarelo.jpeg\n",
-      "new filename : azul.jpeg\n",
-      "new filename : branco.jpeg\n",
-      "new filename : preto.jpeg\n",
-      "new filename : roxo.jpeg\n",
-      "new filename : verde.jpeg\n",
-      "new filename : vermelho.jpeg\n"
+      "new filename : jpeg\\amarelo.jpeg\n",
+      "new filename : jpeg\\azul.jpeg\n",
+      "new filename : jpeg\\branco.jpeg\n",
+      "new filename : jpeg\\preto.jpeg\n",
+      "new filename : jpeg\\roxo.jpeg\n",
+      "new filename : jpeg\\verde.jpeg\n",
+      "new filename : jpeg\\vermelho.jpeg\n"
      ]
     }
    ],
@@ -55,6 +55,7 @@
     "    if infile[-3:] == \"tif\" or infile[-3:] == \"bmp\":\n",
     "       # print \"is tif or bmp\"\n",
     "       outfile = infile[:-3] + \"jpeg\"\n",
+    "       outfile = os.path.join(\"jpeg\", outfile)\n",
     "       im = Image.open(infile)\n",
     "       print (\"new filename : \" + outfile)\n",
     "       out = im.convert(\"RGB\")\n",
