[ADDED] arquivo para manipulacao da resolucao da imagem e loop para segmentacao de varais imagens.

--- a/TCC/src/utils/resized_image.ipynb
+++ b/TCC/src/utils/resized_image.ipynb
@@ -28,30 +28,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\Documentos\\Faculdade - UFPI\\Weight Estimation\\predict_ovinos\\TCC\\images\\02_02\n"
+      "d:\\Documentos\\Faculdade - UFPI\\Weight Estimation\\predict_ovinos\\TCC\\images\\26_03\n"
      ]
     }
    ],
    "source": [
-    "%cd ../../../TCC/images/02_02/"
+    "# %cd ../../../TCC/images/02_02/jpeg\n",
+    "# %cd ../../../TCC/images/12_03\n",
+    "# %cd ../../../TCC/images/15_12\n",
+    "# %cd ../../../TCC/images/19_03\n",
+    "%cd ../../../TCC/images/26_03\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Para varias imagens\n",
-    "dirs = os.listdir(\"jpeg\")\n",
+    "folder = \"D:\\Documentos\\Faculdade - UFPI\\Weight Estimation\\predict_ovinos\\TCC\\images_for_train/\"\n",
+    "dirs = os.listdir(\"./\")\n",
     "\n",
     "def resize():\n",
     "    for item in dirs:\n",
-    "        if os.path.isfile(\"jpeg/\" + item):\n",
-    "            im = Image.open(\"jpeg/\" + item)\n",
-    "            imResize = im.resize((256, 256), Image.ANTIALIAS)\n",
-    "            imResize.save(\"resized/\" + 'r_' +\n",
-    "                          item[:-5] + '.jpg', 'JPEG', quality=90)\n",
+    "        if os.path.isfile(\"./\" + item):\n",
+    "            im = Image.open(\"./\" + item)\n",
+    "            imResize = im.resize((640, 480), Image.Resampling.LANCZOS)\n",
+    "            imResize = imResize.convert('RGB')\n",
+    "            os.makedirs(folder, exist_ok=True)\n",
+    "            imResize.save(folder + 'r_' + item[:-4] + '.jpg', 'JPEG', quality=90)\n",
     "\n",
     "\n",
     "resize()\n",
@@ -70,6 +76,27 @@
     "imResize = im.resize((256,256), Image.ANTIALIAS)\n",
     "imResize.save(\"./resized/\" + 'resized.jpg', 'JPEG', quality=90)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = \"animal_02.png\"\n",
+    "\n",
+    "im = Image.open(img)\n",
+    "imResize = im.resize((256, 256), Image.Resampling.LANCZOS)\n",
+    "imResize = imResize.convert('RGB')\n",
+    "imResize.save(\"resized_256/\" + 'r_' + img[:-4] + '.jpg', 'JPEG', quality=90)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
