[ADDED] arquivos para segmentacao e transformacao de imagem colorida para preto e branco.

--- a/TCC/src/segmentation/seg_pytorch_resnet.ipynb
+++ b/TCC/src/segmentation/seg_pytorch_resnet.ipynb
@@ -239,51 +239,37 @@
    ],
    "source": [
     "imgs = list()\n",
+    "name_imgs = list()\n",
     "path = \"images_for_train/\"\n",
     "dirs = os.listdir(path)\n",
     "\n",
     "for item in dirs:\n",
     "    if os.path.isfile(path + item):\n",
     "        print(path + item)\n",
-    "        imgs.append(segment(dlab, path + item))\n"
+    "        imgs.append(segment(dlab, path + item))\n",
+    "        name_imgs.append(item)\n",
+    "        \n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_7104\\3153150792.py:3: UserWarning: images_segmented/seg_image_0.png is a low contrast image\n",
-      "  imsave(\"images_segmented/seg_image_\"+str(count)+\".png\", x)\n",
+      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_15460\\4021870383.py:6: UserWarning: images_segmented_3/seg_image_r_amarelo.png is a low contrast image\n",
+      "  imsave(\"images_segmented_3/seg_image_\" +\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_7104\\3153150792.py:3: UserWarning: images_segmented/seg_image_5.png is a low contrast image\n",
-      "  imsave(\"images_segmented/seg_image_\"+str(count)+\".png\", x)\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_7104\\3153150792.py:3: UserWarning: images_segmented/seg_image_21.png is a low contrast image\n",
-      "  imsave(\"images_segmented/seg_image_\"+str(count)+\".png\", x)\n",
+      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_15460\\4021870383.py:6: UserWarning: images_segmented_3/seg_image_r_animal_04.png is a low contrast image\n",
+      "  imsave(\"images_segmented_3/seg_image_\" +\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
@@ -298,8 +284,10 @@
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_7104\\3153150792.py:3: UserWarning: images_segmented/seg_image_35.png is a low contrast image\n",
-      "  imsave(\"images_segmented/seg_image_\"+str(count)+\".png\", x)\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_15460\\4021870383.py:6: UserWarning: images_segmented_3/seg_image_r_animal_20.png is a low contrast image\n",
+      "  imsave(\"images_segmented_3/seg_image_\" +\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
@@ -312,8 +300,10 @@
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_7104\\3153150792.py:3: UserWarning: images_segmented/seg_image_47.png is a low contrast image\n",
-      "  imsave(\"images_segmented/seg_image_\"+str(count)+\".png\", x)\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_15460\\4021870383.py:6: UserWarning: images_segmented_3/seg_image_r_animal_47.png is a low contrast image\n",
+      "  imsave(\"images_segmented_3/seg_image_\" +\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
@@ -323,8 +313,22 @@
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
-      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_7104\\3153150792.py:3: UserWarning: images_segmented/seg_image_56.png is a low contrast image\n",
-      "  imsave(\"images_segmented/seg_image_\"+str(count)+\".png\", x)\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_15460\\4021870383.py:6: UserWarning: images_segmented_3/seg_image_r_animal_59.png is a low contrast image\n",
+      "  imsave(\"images_segmented_3/seg_image_\" +\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\pedro\\AppData\\Local\\Temp\\ipykernel_15460\\4021870383.py:6: UserWarning: images_segmented_3/seg_image_r_roxo.png is a low contrast image\n",
+      "  imsave(\"images_segmented_3/seg_image_\" +\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
       "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
@@ -336,10 +340,13 @@
     }
    ],
    "source": [
-    "count = 0\n",
-    "for x in imgs:\n",
-    "  imsave(\"images_segmented/seg_image_\"+str(count)+\".png\", x)\n",
-    "  count+=1\n"
+    "count = len(name_imgs)\n",
+    "folder = \"D:\\Documentos\\Faculdade - UFPI\\Weight Estimation\\predict_ovinos\\TCC\\images_segmented_3\"\n",
+    "\n",
+    "for x in range(count):\n",
+    "  os.makedirs(folder, exist_ok=True)\n",
+    "  imsave(\"images_segmented_3/seg_image_\" +\n",
+    "         str(name_imgs[x][:-4])+\".png\", imgs[x])\n"
    ]
   },
   {
